@@ -88,3 +88,4 @@ RefLtrDisplayTag=Display tags
 RefLtrNoneExists=%s not found (probaly none element exsits yet), impossible to display exemple data
 RefLtrAddPageBreak=Add page break
 RefLtrPageBreak=Page break
+RefLtrAddPageBreakWithoutHeader=Page break (without repeat header on next page)
